src/styles/slides/_cover.sass
.slide
  .slide-inner
    &.cover
      background-image: url(../images/loading@2x.gif)
      background-repeat: no-repeat
      background-position: 50% 50%
      background-size: 50px 50px
      opacity: 0

      &.show-cover
        opacity: 1

        transition: opacity $speed $ease_in

      &.hide-cover
        opacity: 0

        transition: opacity $speed $ease_out

      .cover-wrap
        position: absolute
        top: 50%
        left: 50%
        width: auto
        height: auto
        min-width: 100%
        min-height: 100%
        background-repeat: no-repeat
        background-position: 50% 50%
        background-size: contain
        transform: translate(-50%, -50%)
        opacity: 0
        transition: opacity $speed_metal linear

        &.roll
          opacity: 1

        .cnv-wrap
          position: absolute
          top: 0px
          left: 50%
          transform: translate(-50%, 0)

          &.blend:before,
          &.blend:after
            content: ""
            display: block
            position: absolute
            top: 0px
            width: 200px
            height: 100%
            background-repeat: repeat-y
            background-position: top left

          &.blend:before
            left: 0px

          &.blend:after
            right: 0px
            transform: rotate(180deg)

          canvas
            width: 100%
            height: 100%

      a
        position: absolute
        top: 100px
        left: 100px
        text-transform: capitalize

// Blends for Safari color shift w/ video
.slide#home-landing
  .cnv-wrap
    &.blend:before,
    &.blend:after
      background-image: url(../images/home-blend.png)

.slide#animation-landing
  .cnv-wrap
    &.blend:before,
    &.blend:after
      background-image: url(../images/animation-blend.png)

.slide#interactive-landing
  .cnv-wrap
    &.blend:before,
    &.blend:after
      background-image: url(../images/interactive-blend.png)

